# WhatsUp

./: README.md
WhatsUp/: .gitignore  LICENSE  README.md  WhatsUp.cabal
WhatsUp/src/: Main.hs
WhatsUp/src/Common/: Constants.hs  Formatter.hs  Types.hs  Utils.hs
WhatsUp/src/Parser/: MessageParser.hs
WhatsUp/src/Statistics/: LineCount.hs  TimeSlice.hs  Tokenizer.hs  WordCount.hs  WordFrequency.hs
